production/myfrontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: myfrontend-deployment
  labels:
    app: myfrontend

spec:
  template:
    metadata:
      labels:
        app: myfrontend
    spec:
      containers:
        - name: myfrontend-container
          image: kolosowski/devops-project-frontend:prod1.0
          ports:
            - containerPort: 80
  replicas: 2
  selector:
    matchLabels:
      app: myfrontend
