production/mybackend-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: mybackend-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: mybackend
