production/myfrontend-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: myfrontend-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: myfrontend
