production/mymongo-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: mymongo-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mymongo
    type: db
