production/mybackend-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mybackend-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: prod.127-0-0-1.sslip.io
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mybackend-clusterip
                port:
                  number: 5000
