production/myfrontend-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: myfrontend-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: prod.127-0-0-1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myfrontend-clusterip
                port:
                  number: 80
